package com.beyondsoft.thrift.web.pageModel;

import java.util.ArrayList;

/**
 * SdsbCgBase entity.
 * 
 * @author MyEclipse Persistence Tools
 */

public class PageForm implements java.io.Serializable {

	// Fields

    private String id;
    private String name;
	private String uuid;
    private String value1;
    private String value2;
    private String value3;

    private String value4;
	private String value5;
	private String value6;
	private String value7;
	private String value8;
	private String value9;
	private String value10;
	private String value11;
	private String value12;
	private String value13;
	private String value14;
	private String value15;
	private String value16;
	private String value17;
	private String value18;
	private String value19;
	private String value20;
	private String value21;
	private int v1;
	private int v2;
	private int v3;
	private int v4;
	
	
	
	private int v5;
	private int v6;
	private int v7;
	private int v8;
	private int v9;
	private int v10;
	private int v11;
	private int v12;
	private int page;
	private int rows;
	private ArrayList list;
	public String getId() {
        return id;
    }
	
	public ArrayList getList() {
		return list;
	}
	
	
    public String getName() {
        return name;
    }
	
	public int getPage() {
        return page;
    }
    public int getRows() {
        return rows;
    }
    public String getUuid() {

		return uuid;
	}
    public int getV1() {
		return v1;
	}

    public int getV10() {
		return v10;
	}
	public int getV11() {
		return v11;
	}
	public int getV12() {
		return v12;
	}
	public int getV2() {
		return v2;
	}

	public int getV3() {
		return v3;
	}

	public int getV4() {
		return v4;
	}

	public int getV5() {
		return v5;
	}

	public int getV6() {
		return v6;
	}

	public int getV7() {
		return v7;
	}

	public int getV8() {
		return v8;
	}

	public int getV9() {
		return v9;
	}

	public String getValue1() {

		return value1;
	}

	public String getValue10() {
		return value10;
	}

	public String getValue11() {
		return value11;
	}

	public String getValue12() {
		return value12;
	}

	public String getValue13() {
		return value13;
	}

	public String getValue14() {
		return value14;
	}

	public String getValue15() {
		return value15;
	}

	public String getValue16() {
		return value16;
	}

	public String getValue17() {
		return value17;
	}

	public String getValue18() {
		return value18;
	}

	public String getValue19() {
		return value19;
	}

	public String getValue2() {

		return value2;
	}

	public String getValue20() {
		return value20;
	}

	public String getValue21() {
		return value21;
	}

	public String getValue3() {

		return value3;
	}

	public String getValue4() {

		return value4;
	}

	public String getValue5() {

		return value5;
	}

	public String getValue6() {

		return value6;
	}

	public String getValue7() {

		return value7;
	}

	public String getValue8() {

		return value8;
	}
	public String getValue9() {

		return value9;
	}
	public void setId(String id) {
        this.id = id;
    }
	public void setList(ArrayList list) {
		this.list = list;
	}
	public void setName(String name) {
        this.name = name;
    }
	public void setPage(int page) {
        this.page = page;
    }
	public void setRows(int rows) {
        this.rows = rows;
    }

	public void setUuid(String uuid) {

		this.uuid = uuid;
	}

	public void setV1(int v1) {
		this.v1 = v1;
	}

	public void setV10(int v10) {
		this.v10 = v10;
	}

	public void setV11(int v11) {
		this.v11 = v11;
	}

	public void setV12(int v12) {
		this.v12 = v12;
	}

	public void setV2(int v2) {
		this.v2 = v2;
	}

	public void setV3(int v3) {
		this.v3 = v3;
	}

	public void setV4(int v4) {
		this.v4 = v4;
	}

	public void setV5(int v5) {
		this.v5 = v5;
	}

	public void setV6(int v6) {
		this.v6 = v6;
	}

	public void setV7(int v7) {
		this.v7 = v7;
	}

	public void setV8(int v8) {
		this.v8 = v8;
	}

	public void setV9(int v9) {
		this.v9 = v9;
	}

	public void setValue1(String value1) {

		this.value1 = value1;
	}

	public void setValue10(String value10) {
		this.value10 = value10;
	}

	public void setValue11(String value11) {
		this.value11 = value11;
	}

	public void setValue12(String value12) {
		this.value12 = value12;
	}

	public void setValue13(String value13) {
		this.value13 = value13;
	}

	public void setValue14(String value14) {
		this.value14 = value14;
	}

	public void setValue15(String value15) {
		this.value15 = value15;
	}

	public void setValue16(String value16) {
		this.value16 = value16;
	}

	public void setValue17(String value17) {
		this.value17 = value17;
	}

	public void setValue18(String value18) {
		this.value18 = value18;
	}

	public void setValue19(String value19) {
		this.value19 = value19;
	}

	public void setValue2(String value2) {

		this.value2 = value2;
	}

	public void setValue20(String value20) {
		this.value20 = value20;
	}

	public void setValue21(String value21) {
		this.value21 = value21;
	}

	public void setValue3(String value3) {

		this.value3 = value3;
	}

	public void setValue4(String value4) {

		this.value4 = value4;
	}

	public void setValue5(String value5) {

		this.value5 = value5;
	}

	public void setValue6(String value6) {

		this.value6 = value6;
	}

	public void setValue7(String value7) {

		this.value7 = value7;
	}

	public void setValue8(String value8) {

		this.value8 = value8;
	}

	public void setValue9(String value9) {

		this.value9 = value9;
	}

}